Edits to table css
Adjusted padding on table rows and cells

--- a/css/calyx.css
+++ b/css/calyx.css
@@ -13,6 +13,14 @@ h1, h2, h3, h4, h5, h6 {
     margin: 10px 0;
 }
 
+a {
+	color: #0288D1;
+}
+
+a:hover {
+	color: #0277BD;
+}
+
 input {
     display: table;
     margin-bottom: 10px;
@@ -22,8 +30,20 @@ input {
 table {
     color: inherit;
     font-size: inherit;
+	width: 100%; 
+	border-collapse: collapse;
 }
 
+th {
+	text-align: left;
+	padding: 3px 0px 10px 0px;
+}
+
+td {
+	padding: 10px 0px;
+	border-collapse: collapse;
+	border-top:1px solid #ccc;
+}
 
 
 /*  ****************
@@ -183,7 +203,7 @@ body {
     border: 1px solid #ccc;
     border-radius: 5px;
     color: #444;
-    padding: 5px;
+    padding: 10px;
     min-height: 30px;
 }
 
