--- a/css/calyx.css
+++ b/css/calyx.css
@@ -1,3 +1,6 @@
+/*  ** @version 0.0.2    **
+	** @date 2016-16-05  ** */
+	
 /*  *********************
     **  NORMALIZE CSS  **
     *********************  */
