--- a/css/calyx.css
+++ b/css/calyx.css
@@ -16,8 +16,6 @@ h1, h2, h3, h4, h5, h6 {
     margin: 10px 0;
 }
 
-<<<<<<< HEAD
-=======
 a {
 	color: #0288D1;
 }
@@ -26,7 +24,6 @@ a:hover {
 	color: #0277BD;
 }
 
->>>>>>> origin/master
 input {
     display: table;
     margin-bottom: 10px;
@@ -36,12 +33,9 @@ input {
 table {
     color: inherit;
     font-size: inherit;
-<<<<<<< HEAD
     font-family: inherit;
-=======
 	width: 100%; 
 	border-collapse: collapse;
->>>>>>> origin/master
 }
 
 th {
@@ -143,40 +137,10 @@ td {
         margin-bottom: 0;
     }
     
-<<<<<<< HEAD
     /* Force table to not be like tables anymore */
 	table, thead, tbody, th, td, tr { 
 		display: block; 
-	}
-	
-	/* Hide table headers (but not display: none;, for accessibility) */
-	thead tr { 
-		position: absolute;
-		top: -9999px;
-		left: -9999px;
-	}
-	
-	td { 
-		/* Behave  like a "row" */
-		border: none;
-		position: relative;
-	}
-	
-	td:before { 
-		/* Now like a table header */
-		position: absolute;
-		/* Top/left values mimic padding */
-		top: 6px;
-		left: 6px;
-		width: 45%; 
-		padding-right: 10px; 
-		white-space: nowrap;
-	}
-    
-    tr {margin-bottom: 10px;}
-    tr:last-child {margin-bottom: 0;}
-    
-=======
+    }    
     thead tr { display: none; }
     table td:before {
         content: attr(data-label);
@@ -185,8 +149,13 @@ td {
         margin-right: 5px;
         text-transform: uppercase;
     }
-    table td {display: block;}
->>>>>>> origin/master
+    table tr {
+        margin-bottom: 10px;
+    }
+    table tr:last-child {
+        margin-bottom: 0;
+    }
+
 }
 
 /* TABLETS + */
