--- a/css/calyx.css
+++ b/css/calyx.css
@@ -1,4 +1,4 @@
-/*  ** @version 0.0.7    **
+/*  ** @version 0.0.9    **
 	** @date 2016-16-05  ** */
 	
 /*  *********************
@@ -26,29 +26,47 @@ a:hover {
 
 input {
     display: table;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     width: 100%;
 }
 
-table {
-    color: inherit;
-    font-size: inherit;
-    font-family: inherit;
-	width: 100%; 
-	border-collapse: collapse;
+label {
+	padding:5px 0;
+	display:inline-block;
+	text-transform:uppercase;
+	font-size:11px;
+	color:#7e7e7e;
+	font-weight:600;
 }
 
-th {
-	text-align: left;
-	padding: 3px 0px 10px 0px;
+input[type=search], input[type=email], input[type=number], input[type=password], input[type=tel], input[type=url], input[type=date] {
+	padding:7px 9px;
+	border: 1px solid;
+	border-color: #d3d3d3;
+	border-radius:50px;
+	outline: 0;
+	transition: box-shadow 0.3s ease-in-out;
+	transition: border-color 0.3s ease-in-out;
 }
 
-td {
-	padding: 10px 0px;
-	border-collapse: collapse;
-	border-top:1px solid #ccc;
+input[type=search]:focus, input[type=email]:focus, input[type=number]:focus, input[type=password]:focus, input[type=tel]:focus, input[type=url]:focus, input[type=date]:focus {
+	box-shadow:  0px 0px 3px #E1F5FE , inset 0px 0px 3px #B3E5FC;
+	border-color: #81D4FA;
 }
 
+input[type=button], input[type=submit], input[type=reset]{
+	background-color: #fff;
+	padding: 10px;
+	border-radius: 6px;
+	outline: 0;
+	border: 1px solid;
+	border-color: #e5e6e9 #dfe0e4 #d0d1d5;
+	box-shadow: 0 1px 1px rgba(0,0,0,.05);
+}
+
+input[type=button]:active, input[type=submit]:active, input[type=reset]:active {
+	background-color: #f6f6f6;
+}
 
 /*  ****************
     **  THE GRID  **
@@ -213,6 +231,35 @@ td {
     text-align: left;
 }
 
+/*  *********************
+    **  TABLE STYLES  **
+    *********************  */
+table {
+    color: inherit;
+    font-size: inherit;
+    font-family: inherit;
+	width: 100%; 
+	border-collapse: collapse;
+}
+
+th {
+	text-align: left;
+	padding: 3px 0px 10px 0px;
+}
+
+@media only screen and (max-width : 480px) {
+	td:first-child {
+		border:none;
+	}
+}
+
+td {
+	padding: 10px 0px;
+	border-collapse: collapse;
+	border-top:1px solid #d3d3d3;
+}
+
+
 
 /*  *******************
     **  TEMP STYLES  **
@@ -221,13 +268,17 @@ td {
 
 body {
     font-family: 'Titillium Web', sans-serif;
+	background-color:#f6f6f6;
+	margin-bottom:60px;
+	color:#37474F;
 }
 
-.bgGray {
-    background: #eee;
-    border: 1px solid #ccc;
+.card {
+    background: #fff;
+    border: 1px solid #d3d3d3;
     border-radius: 5px;
-    color: #444;
     padding: 10px;
     min-height: 30px;
+	color:#37474F;
+	box-shadow: 0 1px 1px rgba(0,0,0,.05);
 }
