--- a/css/calyx.css
+++ b/css/calyx.css
@@ -1,5 +1,16 @@
 /*  ** @version 0.0.8    **
-	** @date 2016-22-05  ** */
+	** @date 2016-22-05  ** 
+
+	INDEX:
+	  
+	  1. Normalize CSS
+	  2. The Grid
+	  3. Screen Sizes
+	  4. Utility Classes
+	  5. Navigation
+	  6. Template Styles
+							*/
+
 	
 /*  *********************
     **  NORMALIZE CSS  **
@@ -47,6 +58,16 @@ h5 {
 h6 {
 	font-size: 1.0em;
 }
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #eee;
+    margin: 6em 0;
+    padding: 0; 
+}
+
 a {
 	color: #0288D1;
 }
@@ -105,14 +126,34 @@ input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover {
 	background-color: #A5D6A7;
 }
 
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #eee;
-    margin: 6em 0;
-    padding: 0; 
+input[type=range] {
+  width: 100%;
+  margin: 0;
 }
+
+strong, b {
+	font-weight: bold;
+}
+
+table {
+    color: inherit;
+    font-size: inherit;
+    font-family: inherit;
+	width: 100%; 
+	border-collapse: collapse;
+}
+
+td {
+	padding: 10px 0px;
+	border-collapse: collapse;
+	border-bottom: 1px solid;
+}
+
+th {
+	text-align: left;
+	padding: 3px 0px 10px 0px;
+}
+
 
 /*  ****************
     **  THE GRID  **
@@ -132,7 +173,6 @@ hr {
     position: relative;
     float: left;
     display: block;
-
 }
 
 .col + .col {
@@ -140,8 +180,7 @@ hr {
 }
 
 .col + .col-12 {
-    margin-left: 0;
-    
+    margin-left: 0;    
 }
 
 .col-1 {width: 6.86666666667%;}
@@ -158,6 +197,11 @@ hr {
 .col-12 {
     width: 100%;
     margin-left: 0;
+}
+
+.grid {
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 
@@ -205,8 +249,10 @@ hr {
     /* Force table to not be like tables anymore */
 	table, thead, tbody, th, td, tr { 
 		display: block; 
-    }    
+    }
+	
     thead tr { display: none; }
+	
     table td:before {
         content: attr(data-label);
         float: left;
@@ -214,13 +260,15 @@ hr {
         margin-right: 5px;
         text-transform: uppercase;
     }
+	
     table tr {
-        margin-bottom: 10px;
+        margin-bottom: 15px;
     }
+	
     table tr:last-child {
         margin-bottom: 0;
-    }
-
+    }	
+	
 }
 
 /* TABLETS + */
@@ -270,6 +318,11 @@ hr {
 /*  ***********************
     **  UTILITY CLASSES  **
     ***********************  */
+.col-centered { 
+	margin:auto;
+	float:none;
+}
+
 .txt-center {
     text-align: center;
 }
@@ -278,33 +331,6 @@ hr {
     text-align: left;
 }
 
-/*  *********************
-    **  TABLE STYLES  **
-    *********************  */
-table {
-    color: inherit;
-    font-size: inherit;
-    font-family: inherit;
-	width: 100%; 
-	border-collapse: collapse;
-}
-
-th {
-	text-align: left;
-	padding: 3px 0px 10px 0px;
-}
-
-@media only screen and (max-width : 480px) {
-	td:first-child {
-		border:none;
-	}
-}
-
-td {
-	padding: 10px 0px;
-	border-collapse: collapse;
-	border-top:1px solid #E0E0E0;
-}
 
 
 /*  ******************
@@ -376,9 +402,9 @@ td {
 	
 	
 
-/*  *******************
-    **  TEMP STYLES  **
-    *******************  */
+/*  ***********************
+    **  TEMPLATE STYLES  **
+    ***********************  */
 @import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,700,900);
 
 body {
@@ -395,11 +421,9 @@ h1.example-title {
 	color: #A5D6A7;
 }
 
-.col-centered { 
-	margin:auto;
-	float:none;
+td {
+	border-color: #E0E0E0;
 }
-
 
 .nav  a {
 	text-decoration:none;
