--- a/css/calyx.css
+++ b/css/calyx.css
@@ -4,30 +4,60 @@
 	INDEX:
 	  
 	  1. Normalize CSS
+		  1.1 HTML & Body
+		  1.2 Typography
+		  1.3 Inputs & Forms
+		  1.4 Tables
+		  1.5 Misc. Elements
 	  2. The Grid
 	  3. Screen Sizes
 	  4. Utility Classes
 	  5. Navigation
 	  6. Template Styles
 							*/
-
 	
 /*  *********************
     **  NORMALIZE CSS  **
     *********************  */
 
+/* Normalize HTML & Body */
 html {
-  box-sizing: border-box;
-  line-height: 1.6;
+    box-sizing: border-box;
+    line-height: 1.6;
 }
 *, *:before, *:after {
-  box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 body {
 	font-weight: 300;  
 	margin: 0;
 	margin-top: 70px;
+}
+
+/* Normalize Typography */
+a {
+	color: #0288D1;
+}
+
+a:hover {
+	color: #0277BD;
+}
+
+abbr[title] { /* Crossbrower Abbreviations */
+	border-bottom: none;
+    text-decoration: underline;
+    text-decoration: underline dotted;
+}
+
+code, pre, {
+    font-family: "Courier New", Courier, monospace;
+    font-size: 1em;
+    font-weight: 600;
+}
+
+dfn {
+  font-style: italic;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -59,23 +89,26 @@ h6 {
 	font-size: 1.0em;
 }
 
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #eee;
-    margin: 6em 0;
-    padding: 0; 
+strong, b {
+	font-weight: bold;
 }
 
-a {
-	color: #0288D1;
+sub, sup { /* Make sure SUB and SUP don't affect line-heights */
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
 }
 
-a:hover {
-	color: #0277BD;
+sub {
+    bottom: -0.25em;
 }
 
+sup {
+    top: -0.5em;
+}
+
+/* Normalize Inputs & Forms */
 input {
     display: table;
     margin-bottom: 15px;
@@ -121,14 +154,11 @@ input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover {
 }
 
 input[type=range] {
-  width: 100%;
-  margin: 0;
+    width: 100%;
+    margin: 0;
 }
 
-strong, b {
-	font-weight: bold;
-}
-
+/* Normalize Tables */
 table {
     color: inherit;
     font-size: inherit;
@@ -148,11 +178,20 @@ th {
 	padding: 3px 0px 10px 0px;
 }
 
-
-code, kbd, pre, samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
+/* Normalize Misc. Elements */
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #eee;
+    margin: 6em 0;
+    padding: 0; 
 }
+
+textarea {
+  overflow: auto;
+}
+
 
 
 /*  ****************
