--- a/css/calyx.css
+++ b/css/calyx.css
@@ -29,6 +29,8 @@
 html {
     box-sizing: border-box;
     line-height: 1.6;
+    margin: 0;
+    padding: 0;
 }
 *, *:before, *:after {
     box-sizing: inherit;
@@ -38,6 +40,7 @@ body {
     font-weight: 300;  
     margin: 0;
     margin-top: 70px;
+    padding: 0;
 }
 
 /* Normalize Typography */
@@ -63,6 +66,14 @@ code, pre, {
 
 dfn {
     font-style: italic;
+}
+
+footer {
+    clear: both;
+    float: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -492,6 +503,12 @@ body {
 
 ::selection {
 	background: #cbe7cc;
+}
+
+footer {
+    color: #A5D6A7;
+    border-top: 1px solid #eee;
+    padding-top: 3px;
 }
 
 h1.example-title {
