Mobile Menu - Submenu
Submenu will probably need some click actions in JS. Hover wont cut it
on a cell phone.

--- a/css/calyx.css
+++ b/css/calyx.css
@@ -360,11 +360,7 @@ textarea {
         text-align: left;
     }
     
-    /*ul.nav-menu li:hover > ul {
-        position: relative;
-    }*/
-    
-    ul.nav-menu li:click > ul {
+    ul.nav-menu li:hover > ul {
         position: relative;
     }
     
