--- a/css/calyx.css
+++ b/css/calyx.css
@@ -1,5 +1,5 @@
-/*  ** @version 0.1.0    **
-	** @date 2016-22-05  ** 
+/*  ** @version 0.2.4    **
+	** @date 2016-03-07  ** 
 
 	INDEX:
 	  
@@ -11,9 +11,16 @@
 		  1.5 Misc. Elements
 	  2. The Grid
 	  3. Screen Sizes
-	  4. Utility Classes
-	  5. Navigation
-	  6. Template Styles
+          3.1 Mobile
+            3.1.1 Typography
+            3.1.2 Grid
+            3.1.3 Navigation
+          3.2 Desktop
+            3.2.1 Typography
+            3.2.2 Grid
+            3.2.3 Navigation
+	  4. Navigation
+	  5. Utility Classes
 							*/
 	
 /*  *********************
@@ -52,7 +59,7 @@ a:hover {
     color: #0277BD;
 }
 
-abbr[title] { /* Crossbrower Abbreviations */
+abbr[title] { /* Crossbrowser Abbreviations */
     border-bottom: none;
     text-decoration: underline;
     text-decoration: underline dotted;
@@ -265,7 +272,7 @@ textarea {
     **  SCREEN SIZES  **
     ******************** */
 
-/* PHONE */
+/* MOBILE */
 @media only screen and (max-width : 680px) {
     body {
         font-size: 12px;
@@ -341,50 +348,50 @@ textarea {
     ul.nav-menu li:last-child {display: inline;}
     ul.nav-menu li.mobile-icon {
         float: right;
-    }
-        
-    ul.nav-menu.mobile-nav {position: relative;}
-    
+    }        
+    ul.nav-menu.mobile-nav {position: relative;}    
     ul.nav-menu.mobile-nav li.mobile-icon {
         position: absolute;
         right: 0;
         top: 0;
-    }
-    
+    }    
     ul.nav-menu.mobile-nav li {
         float: none;
         display: inline;
-    }
-    
+    }    
     ul.nav-menu.mobile-nav li a {
         text-align: left;
-    }
-    
-    ul.nav-menu li:hover > ul {
+    }    
+    ul.nav-menu li ul {
         position: relative;
-    }
-    
+    }    
     ul.nav-menu ul li a {
         padding-left: 40px;
     }
     ul.nav-menu ul li a:before {
         content: "- ";
-    }
-    
+    }    
     ul.nav-menu.mobile-nav ul {
-        border-left: none;
-        border-right: none;
+        border: none;
     }
     
+    ul.nav-menu li.site-header {
+        position: relative;        
+    }
+    .dropdown-show {
+        display: block;
+    }
 }
 
 
-/* DESKTOPS */
+/* DESKTOP */
 @media only screen and (min-width: 681px) {
+    /* Desktop Typography */
     body {
         font-size: 15px;
     }
     
+    /* Desktop Grid */
     .grid {
         max-width: 1000px;
         margin-left: auto;
@@ -399,10 +406,84 @@ textarea {
         margin-bottom: 0;
     }
     
-    /* Responsive Navigation */
+    /* Desktop Navigation */
     ul.nav-menu li.mobile-icon {
         display: none;
     }
+    ul.nav-menu.nav-left {
+
+    }
+    ul.nav-menu.nav-left li.site-header {
+        margin-right: 30px;
+    }
+    ul.nav-menu.nav-right {    
+        float: right;
+    }
+    ul.nav-menu.nav-right li.site-header {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }    
+    ul.nav-menu li:hover > ul {
+	    display: block;
+    }
+}
+
+
+
+/*  ******************
+    **  NAVIGATION  **
+    **************** */
+
+.nav {
+	margin: none;
+	min-height: 50px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: block;
+	background: #fff;
+	width: 100%;
+	z-index: 99;
+	border-bottom: 1px solid #eee;
+}
+
+ul.nav-menu {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+	list-style-type: none;
+}
+
+
+ul.nav-menu li {
+    float: left;
+}
+
+ul.nav-menu li a {
+	padding: 15px 25px;
+	display: block;
+	text-align: center;
+}
+
+ul.nav-menu ul {
+    display: none;
+	position: absolute;
+	top: 100%;
+	border: 1px solid #eee;
+	border-top: none;
+	background: #fff;
+	padding: 0;
+	list-style-type: none;
+}
+
+ul.nav-menu ul li {
+    display: block;
+	width: 100%;
+}
+
+.nav a:hover {
+	background: rgba(0,0,0,0.05);
 }
 
 
@@ -442,162 +523,4 @@ textarea {
 
 .hide {
 	display:none;
-}
-
-
-
-/*  ******************
-    **  NAVIGATION  **
-    **************** */
-
-.nav {
-	margin: none;
-	min-height: 50px;
-	position: fixed;
-	top: 0;
-	left: 0;
-	display: block;
-	background: #fff;
-	width: 100%;
-	z-index: 99;
-	border-bottom: 1px solid #eee;
-	}
-
-.nav .site-header a {
-	color: #A5D6A7;
-}
-
-ul.nav-menu {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-	list-style-type: none;
-}
-
-
-ul.nav-menu li {
-    float: left;
-}
-
-ul.nav-menu li a {
-	padding: 15px 25px;
-	display: block;
-	text-align: center;
-}
-
-ul.nav-menu li:hover > ul {
-	display: block;
-}
-
-ul.nav-menu ul
-{
-	display: none;
-	position: absolute;
-	top: 100%;
-	border: 1px solid #eee;
-	border-top: none;
-	background: #fff;
-	padding: 0;
-	list-style-type: none;
-}
-
-ul.nav-menu ul li{
-	width: 100%;
-}
-
-.nav a:hover {
-	background: rgba(0,0,0,0.05);
-}
-
-.nav h1 {
-	padding: 0px;
-	margin: 0px;
-	font-size: 30px;
-	color: #A5D6A7;
-	font-weight: 300;
-	letter-spacing: 3px;
-}
-
-/*  ***********************
-    **  TEMPLATE STYLES  **
-    ***********************  */
-
-@import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,700,900);
-
-body {
-    font-family: 'Titillium Web', sans-serif;
-	margin-bottom: 60px;
-	color: #37474F;
-}
-
-::selection {
-	background: #cbe7cc;
-}
-
-footer {
-    color: #A5D6A7;
-    border-top: 1px solid #eee;
-    padding-top: 3px;
-}
-
-h1.example-title {
-	color: #A5D6A7;
-}
-
-td {
-	border-color: #E0E0E0;
-}
-
-.anchor {
-	display:inline-block;
-	padding-top:65px;
-}
-
-.nav  a {
-	text-decoration:none;
-	color:#A5D6A7;
-	-o-transition:background .1s ease-out, background .1s ease-in;
-	-ms-transition:background .1s ease-out, background .1s ease-in;
-	-moz-transition:background .1s ease-out, background .1s ease-in;
-	-webkit-transition:background .1s ease-out, background .1s ease-in;
-	transition:background .1s ease-out, background .1s ease-in;
-}
-
-.example-nav {
-	position: relative;
-	z-index: 98;
-	border: 1px solid #eee;
-}
-
-.example-column {
-	/* Base Style */
-	background: #eee;
-    border-radius: 5px;
-    padding: 5px 15px;
-    min-height: 30px;
-	color: #37474F;
-	box-shadow: 0 1px 1px rgba(0,0,0,.1);
-	text-align: center;
-}
-
-.code-block  {
-	padding: 0px 20px;
-	font-size: 1em;
-	border: 1px solid #E0E0E0;
-	overflow: auto;
-	border-radius: 5px;
-}
-
-.button-default {
-	background: #CBE7CC!important;
-	
-	-o-transition:background .1s ease-out, background .1s ease-in;
-	-ms-transition:background .1s ease-out, background .1s ease-in;
-	-moz-transition:background .1s ease-out, background .1s ease-in;
-	-webkit-transition:background .1s ease-out, background .1s ease-in;
-	transition:background .1s ease-out, background .1s ease-in;
-}
-
-.button-default:hover { 
-	background: #A5D6A7!important;
 }
