--- a/css/theme-calyx.css
+++ b/css/theme-calyx.css
@@ -34,6 +34,10 @@ td {
 	padding-top:65px;
 }
 
+.nav-default {
+	background-color:#fff;
+}
+
 nav  a {
 	text-decoration:none;
 	color:#A5D6A7;
@@ -98,4 +102,10 @@ nav a:hover {
 
 .button-default:hover { 
 	background: #A5D6A7!important;
+}
+
+.nav-example-container {
+	position:relative;
+	height:60px;
+	width:100%;
 }
